Ch3 Completed Numpy

--- a/Python/Python for DA/ch04-NumPy basics.ipynb
+++ b/Python/Python for DA/ch04-NumPy basics.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy Basics: Arrays and "
+    "# NumPy Basics: Arrays and \n",
+    "- Numpy Arrays : Multi-Dimesnional, fast arithmetic, linear algebra operations, vectorized functions support\n",
+    "- Ways of creating numpy arrays - np.arange, np.ones, np.empty, use of np.random module   \n",
+    "- Attributes : shape, ndim, dtype , type conversion (created a copy)\n",
+    "- Indexing methods : slice using [], boolean indexing, fancy indexing ;  slicing does not create a copy  \n",
+    "- Arithmetic and Logical Operations on arrays \n",
+    "- Logical Operators used in numpy arrays - &, I, ~, ==, !=  unlike and or not in python\n",
+    "- Universal functions - unary and binary (vectorized)  \n",
+    "-  Sorting and Set functions \n",
+    "- Conditional logic as numpy arrays, use of np. where()  \n",
+    "- Array Programming\n",
+    "- Statistical Operations on arrays - mean, sd, var, argmin/max  \n",
+    "- Boolean array operations - any, all\n",
+    "- numpy.random methods for Pseudo random generation   \n",
+    "- numpy.linalg methods for matrix operations : dot product, inv, det, eig etc  \n",
+    "- tanspose and swapping axes"
    ]
   },
   {
