--- a/Spark/Spark 101/Spark-Intro, RDDs.ipynb
+++ b/Spark/Spark 101/Spark-Intro, RDDs.ipynb
@@ -101,6 +101,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Transformations : filter, map  \n",
+    "Actions : collect, count , reduce  **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**filter** - Return a new RDD after applying a specified filtering function on each element of an RDD.  \n",
     "Define a filtering function and apply it by passing in filter() method of RDD\n",
     "Example of a sequence of transformation and action:\n"
@@ -144,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "from operator import add\n",
+    "#from operator import add\n",
     "sc.parallelize([1, 2, 3, 4, 5]).reduce(lambda a,b : max(a,b) )"
    ]
   },
@@ -152,7 +160,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "flatMap"
+    "**flatMap(f, preservesPartitioning=False)**  \n",
+    "Return a new RDD by first applying a function to all elements of this RDD, and then flattening the results."
    ]
   },
   {
@@ -170,7 +179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ReduceByKey"
+    "**reduceByKey(func, numPartitions=None, partitionFunc=<function portable_hash at 0x7fc35dbc8e60>)**  \n",
+    "Merge the values for each key using an associative and commutative reduce function.  \n",
+    "\n",
+    "This will also perform the merging locally on each mapper before sending results to a reducer, similarly to a “combiner” in MapReduce.  \n",
+    "\n",
+    "Output will be partitioned with numPartitions partitions, or the default parallelism level if numPartitions is not specified. Default partitioner is hash-partition.  "
    ]
   },
   {
@@ -253,7 +267,8 @@
    },
    "outputs": [],
    "source": [
-    "l_spark"
+    "# filter operation follwed by action count\n",
+    "readme.filter(lambda line : 'Spark' in line).count()"
    ]
   },
   {
@@ -264,13 +279,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformation and Actions can be seen as functions oriented to performing specific types of operations,  and taking arguments as functions defined to perform those"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Break each line into words, count the words (transformations) and find max (can be in action of reduce)\n",
+    "readme.map(lambda line : len(line.split())).reduce(lambda a,b: max(a,b) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# same as above, but not using anaonymous function\n",
+    "def max(a, b):\n",
+    " if a > b:\n",
+    "    return a\n",
+    " else:\n",
+    "    return b\n",
+    "readme.map(lambda line : len(line.split())).reduce(max)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count of Words / Freq. distribution of words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# On RDD, use transformation - \n",
+    "# a flat map to create a list of all words in lines, use map to create a tuple with count 1, then use reduceByKey to add counts \n",
+    "# Action - possibly collect, if collect does not bring a large amount of data into driver node\n",
+    "counts = readme.flatMap(lambda line: line.split()).map(lambda x: (x,1)).reduceByKey(add).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Word with max counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rdd1 = readme.flatMap(lambda x: x.split()).map(lambda x: (x,1)).reduceByKey(add)\n",
+    "rdd1.reduce(lambda a,b : a if(a[1] > b[1]) else b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Spark Caching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When operating on a small RDD or when needing to do repeated operations on a RDD, it might be speedy to cache the RDD (still in \n",
+    "a distributed way), i.e all nodes save the partitioned data in memory.   \n",
+    "A typical usage scenario will be doing an interative model training on the same data perhaps.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "l_spark = readme.filter(lambda line : 'Spark' in line)\n",
+    "def count ():\n",
+    "    l_spark.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Timer helps time an operation by running multiple iterations\n",
+    "from timeit import Timer\n",
+    "t = Timer(count())\n",
+    "t.timeit(number = 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "l_spark.cache()\n",
+    "t.timeit(number = 50)"
+   ]
   }
  ],
  "metadata": {
