--- a/Spark/Spark 101/01_Spark-Intro, RDDs.ipynb
+++ b/Spark/Spark 101/01_Spark-Intro, RDDs.ipynb
@@ -94,6 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Spark Methods for RDD in Python API"
    ]
   },
@@ -101,8 +108,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Transformations : filter, map  \n",
-    "Actions : collect, count , reduce  **"
+    "**Transformations : filter, map , reduce  , reduceByKey, groupByKey  \n",
+    "Actions : collect, count, take, foreach(func)  **"
    ]
   },
   {
@@ -191,7 +198,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code Examples"
+    "** sortByKey(ascending=True, numPartitions=None, keyfunc=<function <lambda> at 0x7fc35dbcf848>)**  \n",
+    "Sorts this RDD, which is assumed to consist of (key, value) pairs.   \n",
+    "keyfunc can be used to specify the function used to sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**join(other, numPartitions=None)**  \n",
+    "Return an RDD containing all pairs of elements with matching keys in self and other.\n",
+    "\n",
+    "Each pair of elements will be returned as a (k, (v1, v2)) tuple, where (k, v1) is in self and (k, v2) is in other.\n",
+    "\n",
+    "Performs a hash join across the cluster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code Examples with Python and Scala"
    ]
   },
   {
@@ -230,7 +265,10 @@
    },
    "outputs": [],
    "source": [
-    "readme = sc.textFile(\"README.md\") # usually will be Reading a distributed file on a cluster"
+    "# Python \n",
+    "readme = sc.textFile(\"README.md\") # usually will be Reading a distributed file on a cluster\n",
+    "# Scala\n",
+    "val readme = sc.textFile(\"README.md\") "
    ]
   },
   {
@@ -248,6 +286,7 @@
    },
    "outputs": [],
    "source": [
+    "# Python\n",
     "readme.first()\n",
     "readme.count()"
    ]
@@ -256,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Count no. of line that contain word 'Spark'"
+    "### Count no. of lines that contain word 'Spark'"
    ]
   },
   {
@@ -268,7 +307,18 @@
    "outputs": [],
    "source": [
     "# filter operation follwed by action count\n",
-    "readme.filter(lambda line : 'Spark' in line).count()"
+    "## Python \n",
+    "readme.filter(lambda line : 'Spark' in line).count()\n",
+    "## Scala\n",
+    "readme.filter(line => line.contains(\"Spark\")).count()   # single quotes don't work in scala"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notice that instead of a lambda function, in scala an anonymous function is defined using the syntax   \n",
+    "arg => function specification  "
    ]
   },
   {
@@ -293,8 +343,14 @@
    },
    "outputs": [],
    "source": [
-    "# Break each line into words, count the words (transformations) and find max (can be in action of reduce)\n",
-    "readme.map(lambda line : len(line.split())).reduce(lambda a,b: max(a,b) )"
+    "# Break each line into words, count the words (transformations) and find max \n",
+    "## Python\n",
+    "readme.map(lambda line : len(line.split())).reduce(lambda a,b: max(a,b) )\n",
+    "## Scala\n",
+    "import java.lang.Math\n",
+    "readme.map(line => line.split(\" \")).\n",
+    "map(line => line.size).\n",
+    "reduce((a,b) => Math.max(a,b))"
    ]
   },
   {
@@ -305,7 +361,7 @@
    },
    "outputs": [],
    "source": [
-    "# same as above, but not using anaonymous function\n",
+    "# same as above, but not using anaonymous function in Python\n",
     "def max(a, b):\n",
     " if a > b:\n",
     "    return a\n",
@@ -332,7 +388,12 @@
     "# On RDD, use transformation - \n",
     "# a flat map to create a list of all words in lines, use map to create a tuple with count 1, then use reduceByKey to add counts \n",
     "# Action - possibly collect, if collect does not bring a large amount of data into driver node\n",
-    "counts = readme.flatMap(lambda line: line.split()).map(lambda x: (x,1)).reduceByKey(add).collect()"
+    "counts = readme.flatMap(lambda line: line.split()).map(lambda x: (x,1)).reduceByKey(add).collect()\n",
+    "\n",
+    "# Scala\n",
+    "readme.flatMap(line => line.split(\" \")).\n",
+    "map(wrd => (wrd,1)).reduceByKey((a,b) => a+b).\n",
+    "take(5) # first five pairs"
    ]
   },
   {
@@ -350,8 +411,14 @@
    },
    "outputs": [],
    "source": [
+    "# Python \n",
     "rdd1 = readme.flatMap(lambda x: x.split()).map(lambda x: (x,1)).reduceByKey(add)\n",
-    "rdd1.reduce(lambda a,b : a if(a[1] > b[1]) else b)"
+    "rdd1.reduce(lambda a,b : a if(a[1] > b[1]) else b)\n",
+    "\n",
+    "# Scala\n",
+    "readme.flatMap(line => line.split(\" \")).\n",
+    "map(wrd => (wrd,1)).reduceByKey((a,b) => a+b).\n",
+    "reduce((a,b) => if(a._2 > b._2) a else b)"
    ]
   },
   {
