--- a/Python/Python for DA/ch03 - built-in data structures and functions.ipynb
+++ b/Python/Python for DA/ch03 - built-in data structures and functions.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
     }
    ],
    "source": [
-    "gen = range(10) # range is alos a generator/iterator expression, use of list can ,aterialize it\n",
+    "gen = range(10) # range is alos a generator/iterator expression, use of list can ,materialize it\n",
     "print(gen)\n",
     "list(gen)"
    ]
@@ -881,10 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#help(bisect)"
@@ -2599,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -2613,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2627,7 @@
        "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2644,12 +2642,12 @@
    "metadata": {},
    "source": [
     "## Iterators cannot be indexed, as they are called they are relased, the below will not produce any output  \n",
-    "## Generators are used when a massive amount of data is to be explored and you do not want ## to save it "
+    "## Generators are used when a massive amount of data is to be explored and you do not want to save it "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -2689,36 +2687,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _make_gen at 0x107868f10>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def _make_gen():\n",
+    "def _make_gen(x):\n",
     "    for x in range(100):\n",
     "        yield x ** 2\n",
-    "gen = _make_gen()"
+    "gen = _make_gen(5)\n",
+    "gen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "328350\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(x ** 2 for x in range(100))\n",
+    "print(sum(x ** 2 for x in range(100)))\n",
     "dict((i, i **2) for i in range(5))"
    ]
   },
@@ -3468,7 +3483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
