--- a/Python/Python for DA/ch04-NumPy basics.ipynb
+++ b/Python/Python for DA/ch04-NumPy basics.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "       [-0.5557,  1.9658,  1.3934]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,11 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.4094,  0.9579, -1.0389],\n",
+       "       [-1.1115,  3.9316,  2.7868]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data * 10\n",
     "data + data"
@@ -150,11 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.shape\n",
     "data.dtype"
@@ -169,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +197,7 @@
        "array([ 6. ,  7.5,  8. ,  0. ,  1. ])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +220,7 @@
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +242,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int32')"
+       "dtype('int64')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +440,7 @@
        "array([  1.25,  -9.6 ,  42.  ])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## astype conversion results in a copy of the error being created"
+    "## astype conversion results in a copy of the array being created"
    ]
   },
   {
@@ -499,6 +518,17 @@
    "source": [
     "empty_uint32 = np.empty(8, dtype='u4') # empty can have garbage values\n",
     "empty_uint32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.dtype?"
    ]
   },
   {
@@ -1644,9 +1674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]]\n",
+      "\n",
+      " [[ 8  9 10 11]\n",
+      "  [12 13 14 15]]]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1657,14 +1698,14 @@
        "        [12, 13, 14, 15]]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = np.arange(16).reshape((2, 2, 4))\n",
-    "arr\n",
+    "print(arr)\n",
     "arr.transpose((1, 0, 2)) # transpose metjhod takes a tuple with any re-ordering of the axes that needs to be specified\n",
     "# Here axes 0 is swapped with 1 resulting in changes below that can be confirmed"
    ]
@@ -2217,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2229,27 +2270,18 @@
       " [6 7 8]]\n",
       "[[ 0  1  2]\n",
       " [ 3  5  7]\n",
-      " [ 9 12 15]]\n"
+      " [ 9 12 15]]\n",
+      "[[  0   0   0]\n",
+      " [  3  12  60]\n",
+      " [  6  42 336]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0,   0,   0],\n",
-       "       [  3,  12,  60],\n",
-       "       [  6,  42, 336]], dtype=int32)"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8]])\n",
     "print(arr)\n",
     "print(arr.cumsum(axis=0))\n",
-    "arr.cumprod(axis=1)"
+    "print(arr.cumprod(axis=1))"
    ]
   },
   {
@@ -2320,11 +2352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.2962,  0.0929,  0.2817,  0.769 ,  1.0072,  1.2464])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.random.randn(6)\n",
     "arr\n",
@@ -2334,15 +2375,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.5238  0.0009  1.3438]\n",
+      " [-0.7135 -0.8312 -2.3702]\n",
+      " [-1.8608 -0.8608  0.5601]\n",
+      " [-1.2659  0.1198 -1.0635]\n",
+      " [ 0.3329 -2.3594 -0.1995]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.8608, -2.3594, -2.3702],\n",
+       "       [-1.2659, -0.8608, -1.0635],\n",
+       "       [-0.7135, -0.8312, -0.1995],\n",
+       "       [ 0.3329,  0.0009,  0.5601],\n",
+       "       [ 0.5238,  0.1198,  1.3438]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.random.randn(5, 3)\n",
-    "arr\n",
-    "arr.sort(1)\n",
+    "print(arr)\n",
+    "arr.sort(0)\n",
     "arr"
    ]
   },
@@ -2748,27 +2813,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.randint(0,1)"
+    "np.random.randint(0,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -2786,27 +2851,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x256f7c7dac8>"
+       "<matplotlib.figure.Figure at 0x113824668>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x256f7c7dac8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3054,7 +3110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
