Week 2 videos complete

--- a/Deep Learning/1_Neural Networks/Week 2/1_LR_algo_math_rep.ipynb
+++ b/Deep Learning/1_Neural Networks/Week 2/1_LR_algo_math_rep.ipynb
@@ -238,6 +238,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Mathematical Basis for LR's Loss function / Maximum Likelihood function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We state the probability function as follows for Binary LR\n",
+    "\\begin{align}\n",
+    "P(Y = 1 \\mid x)  &= g(w^T x + b) = \\hat y \\\\\n",
+    "P(Y = 0 \\mid x) & = 1 - \\hat y \n",
+    "\\end{align}  \n",
+    "A general form of stating LR's hypothesis is:  \n",
+    "\\begin{align}\n",
+    "P(Y\\mid x) = (\\widehat y)^y * (1-\\widehat y)^{1-y} \\\\\n",
+    "\\end{align} \n",
+    "Over a set of m data points, we would like to maximize the likelihood of predicted prob. being close to actual, which is:  \n",
+    "\\begin{align}\n",
+    "\\prod_{y=i}^m P(y^{(i)}\\mid x^{(i)}) = \\prod_{y=i}^m [(\\widehat {y^{(i)}})^{y^{(i)}} * (1-\\widehat {y^{(i)}})^{1-y^{(i)}}] \\\\\n",
+    "\\end{align} \n",
+    "\n",
+    "Taking Log gives a function called Log Likelihood function, log makes this a monotonically increasing function, we want to maximize the function below, it is callaed ** Maximizing log likelohood ** :  \n",
+    "\\begin{align}\n",
+    "Max \\; [\\log \\prod_{y=i}^m P(y^{(i)}\\mid x^{(i)})] = Max \\; [\\Sigma_{i=1}^{m} [ y^{(i)} \\log (\\widehat {y^{(i)}}) + (1-y^{(i)}) \\log (1-\\widehat {y^{(i)}})]]\n",
+    "\\end{align} \n",
+    "\n",
+    "Maximizing log likelihood is akin to minimizing loss, which is negative of Log Likelihood. We want to turn this into\n",
+    "a minimization problem, also that the loss function will always be positive and its minima will be 0. We can see total cost as a monotonically decreasing function, which is solvable using gradient descent\n",
+    "\n",
+    "\\begin{align}\n",
+    "Min \\; [-1 * \\log \\prod_{y=i}^m P(y^{(i)}\\mid x^{(i)})] = Min \\; [-1 * \\Sigma_{i=1}^{m} [ y^{(i)} \\log (\\widehat {y^{(i)}}) + (1-y^{(i)}) \\log (1-\\widehat {y^{(i)}})]]\n",
+    "\\end{align} \n",
+    "\n",
+    "Finally we take average over m, to scale the coefficients better\n",
+    "\\begin{align}\n",
+    "Min \\; [\\frac{-1}{m} * \\log \\prod_{y=i}^m P(y^{(i)}\\mid x^{(i)})] & = Min \\; [\\frac{-1}{m} * \\Sigma_{i=1}^{m} [ y^{(i)} \\log (\\widehat {y^{(i)}}) + (1-y^{(i)}) \\log (1-\\widehat {y^{(i)}})]] \\\\\n",
+    "\\end{align}  \n",
+    "where Cost function is defined as : \n",
+    "\\begin{align}\n",
+    "J(w,b) & = -\\frac{1}{m} \\Sigma_{i=1}^{m} [ y^{(i)} \\log (\\widehat {y^{(i)}}) + (1-y^{(i)}) \\log (1-\\widehat {y^{(i)}})\n",
+    "\\end{align} \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# TBD -  draw a contour plot to show functional form of above cost function, assuming a single feature case (after learning matplotlib)"
    ]
   },
