Ch4 Numpy updates

--- a/Python/Python for DA/ch04-NumPy basics.ipynb
+++ b/Python/Python for DA/ch04-NumPy basics.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# NumPy Basics: Arrays and \n",
-    "- Numpy Arrays : Multi-Dimesnional, fast arithmetic, linear algebra operations, vectorized functions support\n",
+    "- Numpy Arrays : Multi-Dimesnional, fast arithmetic, linear algebra operations, vectorized functions support  \n",
+    "- To optimize memory, many operations do not create an explicit copy of array, rather changes are made to the array itself, so know well which do and which do not\n",
     "- Ways of creating numpy arrays - np.arange, np.ones, np.empty, use of np.random module   \n",
     "- Attributes : shape, ndim, dtype , type conversion (created a copy)\n",
     "- Indexing methods : slice using [], boolean indexing, fancy indexing ;  slicing does not create a copy  \n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -114,17 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.2047,  0.4789, -0.5194],\n",
-       "       [-0.5557,  1.9658,  1.3934]])"
+       "array([[ 0.275 ,  0.2289,  1.3529],\n",
+       "       [ 0.8864, -2.0016, -0.3718]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,24 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = data * 10 # Called Broadcasting, 10 is expanded to dimensions of data and then element wise multiplication is performed\n",
+    "#data + data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[-0.4094,  0.9579, -1.0389],\n",
-       "       [-1.1115,  3.9316,  2.7868]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.275   0.2289  1.3529]\n",
+      " [ 0.8864 -2.0016 -0.3718]]\n",
+      "[[  2.7499   2.2891  13.5292]\n",
+      " [  8.8643 -20.0164  -3.7184]]\n"
+     ]
     }
    ],
    "source": [
-    "data * 10\n",
-    "data + data"
+    "# Base array is not changed\n",
+    "print(data)\n",
+    "print(data2)"
    ]
   },
   {
@@ -431,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +451,7 @@
        "array([  1.25,  -9.6 ,  42.  ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,27 +787,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[[ 1,  2,  3],\n",
-       "        [ 4,  5,  6]],\n",
-       "\n",
-       "       [[ 7,  8,  9],\n",
-       "        [10, 11, 12]]])"
+       "(2, 2, 3)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr3d = np.array([[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]]])\n",
-    "arr3d"
+    "print(arr3d)\n",
+    "arr3d.shape"
    ]
   },
   {
@@ -1095,7 +1114,7 @@
     }
    ],
    "source": [
-    "names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe']) # row names\n",
+    "names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe']) # row names are an array itself\n",
     "data = np.random.randn(7, 4)\n",
     "names\n",
     "data"
@@ -1614,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1623,29 +1642,25 @@
      "text": [
       "[[ 0  1  2  3  4]\n",
       " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "[[20 20 20]\n",
+      " [ 1  6 11]\n",
+      " [ 2  7 12]\n",
+      " [ 3  8 13]\n",
+      " [ 4  9 14]]\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
       " [10 11 12 13 14]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  5, 10],\n",
-       "       [ 1,  6, 11],\n",
-       "       [ 2,  7, 12],\n",
-       "       [ 3,  8, 13],\n",
-       "       [ 4,  9, 14]])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = np.arange(15).reshape((3, 5))\n",
     "print(arr)\n",
-    "arr.T # lets you get th transpose in a view\n",
-    "#print(arr)"
+    "t = arr.T.copy() # lshould create a copy of transspose, remove it and see the effect\n",
+    "t[0] = 20\n",
+    "print(t)\n",
+    "print(arr)"
    ]
   },
   {
@@ -1882,7 +1897,7 @@
    "source": [
     "## Meshgrid - what is it\n",
     "### Function that lets you start from a one dimension array and create a mesh like structure\n",
-    "### say start from [1,2,3,4] and create all possible pairs, which will be 10 \n",
+    "### say start from [1,2,3,4] and create all possible pairs, which will be 16 \n",
     "### Ways to represent these is using these two matrices, where pair of corresponding elements represent each pair,\n",
     "### order mattering\n",
     "\n",
@@ -2584,7 +2599,7 @@
    "metadata": {},
    "source": [
     "## Linear Algebra  \n",
-    "- Unlinke many languages * in mumpy represents element wise multiplication in arrays\n",
+    "- Unlinke many languages * in numpy represents element wise multiplication in arrays\n",
     "- Matrix multiplication in indicated using np.dot() method / @ operator  \n",
     "- np.linag module has lin algebra methods like - inv,det, eig, diag ( of a square matrix), trace (sum of diag. elements), \n",
     "  svd (Singular Value Decomp.), lstsq (Least Square solution to Ax = B) , solve (Ax =b), qr (QR decomposition)\n"
@@ -2800,7 +2815,7 @@
     }
    ],
    "source": [
-    "rng = np.random.RandomState(1234) # to generate random seet separate from a global seed setting\n",
+    "rng = np.random.RandomState(1234) # to generate random seed separate from a global seed setting\n",
     "rng.randn(10)"
    ]
   },
